<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_foto">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.abi.homeactivity.ui.home.ItemFragment"
        android:label="@string/title_mensaje"
        tools:layout="@layout/fragment_item_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.abi.homeactivity.ui.home.ItemFragment"
        android:label="@string/title_contactos"
        tools:layout="@layout/fragment_item_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.abi.homeactivity.ui.home.ItemFragment"
        android:label="@string/title_foto"
        tools:layout="@layout/fragment_item_list" />
</navigation>