<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PrivacidadActivity"
    android:background="@color/blueintermediate">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_constrain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView_titulo_aviso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/titulo_aviso"
            android:textColor="@color/ourblack"
            app:layout_constraintBottom_toTopOf="@+id/imagenDia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imagenDia"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_aviso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_titulo_aviso"
            app:lottie_autoPlay="true"
            app:lottie_fileName="AvisoPrivacidad.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/textView_aviso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/Aviso_privacidad"
            android:textAlignment="center"
            android:textColor="@color/ourblack"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxLeido"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagenDia" />

        <Button
            android:id="@+id/button_aviso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/Aceptar_aviso"
            android:textColor="@color/ourwhite"
            app:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxLeido"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/checkBoxLeido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/Leido"
            android:textColor="@color/black"
            android:visibility="visible"
            app:buttonTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/button_aviso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_aviso"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>