<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueintermediate"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/textViewMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/muli_extrabold"
        android:text="@string/texto_mensaje"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imagenDia"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMensaje"
        app:lottie_autoPlay="true"
        app:lottie_fileName="MensajeAyuda.json"
        app:lottie_loop="true" />

    <Button
        android:id="@+id/buttonMensaje"
        android:layout_width="251dp"
        android:layout_height="41dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/muli_extrabold"
        android:text="@string/boton_mensaje"
        android:textSize="12sp"
        app:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_atras_mensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/blueintermediate"
        android:tint="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bx_arrow_back" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="369dp"
        android:layout_height="157dp"
        android:background="@drawable/custom_input_grey"
        android:fontFamily="@font/muli_extrabold"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/entrada_mensaje"
        android:textAlignment="center"
        android:textColor="@color/grisLetras"
        android:textColorHint="@color/grisLetras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenDia" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/muli_extrabold"
        android:text="Puedes seleccionar alguna de las siguientes opciones:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

    <TextView
        android:id="@+id/textViewOpcion1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:autoText="false"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/muli"
        android:text="Me encuentro en peligro, ubícame en la aplicación de ABI"
        android:textAlignment="center"
        android:textColor="@color/ourblack"
        app:autoSizeTextType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textViewOpcion2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/muli"
        android:text="Necesito de tu ayuda"
        android:textAlignment="center"
        android:textColor="@color/ourblack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textViewOpcion3"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/muli"
        android:text="Algo me ocurre, "
        android:textAlignment="center"
        android:textColor="@color/ourblack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOpcion1" />

    <TextView
        android:id="@+id/textViewOpcion4"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/muli"
        android:text="Ayudame lo antes posible"
        android:textAlignment="center"
        android:textColor="@color/ourblack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOpcion2" />

</androidx.constraintlayout.widget.ConstraintLayout>